[package]
name = "ironnotify"
version = "0.1.0"
edition = "2021"
authors = ["IronServices <support@ironservices.com>"]
description = "Event notifications and alerts SDK for Rust applications"
license = "MIT"
repository = "https://github.com/IronServices/ironnotify-rust"
documentation = "https://docs.rs/ironnotify"
readme = "README.md"
keywords = ["notifications", "alerts", "events", "push", "messaging"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dirs = "5.0"
once_cell = "1.19"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
